# factorize

./: Cargo.toml  README.md  meta
benches/: factorization.rs  low_numbers.rs
src/: algorithms.rs  lib.rs  main.rs  math.rs  sieve.rs
src/algorithms/: brents_rho.rs  fermat.rs  mod.rs  primality.rs  trial_division.rs
