[package]
name = "factorize"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"
rug = "1.16.0"

[dev-dependencies]
criterion = {version="0.3.6", features=["html_reports"]}
rand = "0.8.5"

[[bench]]
name = "factorization"
harness = false
